crates/wac-parser/tests/resolution/fail/mismatched-resource-types.wac
package test:comp;

import x: interface {
    resource x;
    resource y;
    f: func(x: y);
};

let i = new foo:bar { x };
